[project]
name = "usgs-water-mcp"
version = "0.1.0"
description = "MCP server for USGS water data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.1",
]

[tool.setuptools]
py-modules = ["main", "water_data_api", "flood_impact_api", "ogc_api", "current_water_levels"]
